# rest_lib

./: .env.dist  Makefile  README.md  docker-compose.yml  launch.json.dist  requirements.txt  setup.cfg  wsgi_dev.ini
internal_docs/: apis_desktop.md  colaborando_projeto.md  exemplo_dtos.md  opentelemetry.md
internal_docs/outros_recursos/: healthcheck.md
internal_docs/recursos/: controller.md  dao.md  dto.md  dto_field.md  dto_sql_join_field.md  entity.md  etag.md  filters.md
src/rest_lib/: cli.py  db_pool_config.py  doc_route_generator.py  exception.py  healthcheck_config.py  injector_factory_base.py  otel-collector-config.yaml  settings.py  wsgi.py
src/rest_lib/controller/: command_router.py  constants.py  controller_util.py  delete_route.py  funtion_route_wrapper.py  get_route.py  list_route.py  patch_route.py  post_route.py  put_route.py  route_base.py
src/rest_lib/dao/: dao_base.py  dao_base_conjuntos.py  dao_base_delete.py  dao_base_function.py  dao_base_get.py  dao_base_insert.py  dao_base_list.py  dao_base_partial_of.py  (+5 more)
tests/: classificacao_financeira_controller.py  classificacao_financeira_dto.py  classificacao_financeira_entity.py  classificacao_financeira_function_types.py  cliente_byfunction_controller.py  cliente_byfunction_dto.py  cliente_byfunction_endereco_dto.py  cliente_byfunction_endereco_entity.py  cliente_byfunction_entity.py  cliente_byfunction_insert_function_type.py  cliente_controller.py  cliente_dto.py  cliente_entity.py  email_dto.py  email_entity.py  test_partial_of_fixed_filters.py
tests/rest/: classificacao_financeira.rest
(+79 files in other folders)
