[metadata]
name = rest_lib
version = 6.4.1
author = Nasajon Sistemas
author_email = contact.dev@nasajon.com.br
description = Biblioteca para construção de APIs Rest Python, de acordo com o guidelines interno, e com paradigma declarativo.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Nasajon/rest_lib
project_urls =
    Source = https://github.com/Nasajon/rest_lib
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.4
install_requires =
    Flask>=2.0.3,<3.0.0
    SQLAlchemy>=1.4.32,<3.0.0
    pg8000>=1.24.1,<2.0.0
    sqlparams>=3.0.0,<4.0.0
    pydantic>=1.9.0,<3.0.0
    python-dateutil>=2.9.0,<3.0.0
    PyMySQL>=1.0.2,<2.0.0
    py-healthcheck>=1.10.1,<2.0.0
    unidecode>=1.0.22,<2.0.0
    opentelemetry-exporter-otlp>=1.32.1,<2.0.0
    pyyaml>=6.0.3,<7.0.0

[options.packages.find]
where = src
